--- a/env.example
+++ b/env.example
@@ -8,6 +8,10 @@
 HULEEDU_DB_USER=huleedu_user
 HULEEDU_DB_PASSWORD=your-secure-database-password-here
 
+# IMPORTANT: Avoid special characters in passwords (especially # @ : / ? & =)
+# Docker Compose treats # as a comment delimiter even within quotes.
+# Use only alphanumeric characters, underscores (_), and hyphens (-) for passwords.
+
 # =============================================================================
 # Database Environment Toggle
 # =============================================================================
