fix(auth): correct JWT configuration and implement proper HS256 signing
- Add CJ_ASSESSMENT_SERVICE_JWT_SECRET_KEY to docker-compose.services.yml
- Fix API Gateway JWT env var: JWT_SECRET_KEY -> API_GATEWAY_JWT_SECRET_KEY
- Refactor DevTokenIssuer to use PyJWT library for proper HS256 signing
- Add audience and issuer validation to token verification
- Update token issuer tests to reflect new implementation
- Resolves 500 errors on CJ admin endpoints caused by missing JWT config

--- a/docker-compose.services.yml
+++ b/docker-compose.services.yml
@@ -405,6 +405,8 @@ services:
       - OTEL_SERVICE_NAME=cj_assessment_service
       - OTEL_TRACES_EXPORTER=otlp
       - OTEL_METRICS_EXPORTER=none
+      # JWT authentication for admin endpoints
+      - CJ_ASSESSMENT_SERVICE_JWT_SECRET_KEY=${JWT_SECRET_KEY:-your-secret-key-here}
     healthcheck:
       test: ["CMD-SHELL", "curl -f http://localhost:9090/healthz || exit 1"]
       interval: 15s
@@ -443,7 +445,7 @@ services:
       - API_GATEWAY_SERVICE_HOST=0.0.0.0
       - API_GATEWAY_SERVICE_REDIS_URL=redis://redis:6379
       # JWT Configuration
-      - JWT_SECRET_KEY=${JWT_SECRET_KEY:-your-secret-key-here}
+      - API_GATEWAY_JWT_SECRET_KEY=${JWT_SECRET_KEY:-your-secret-key-here}
       # Backend service URLs
       - BATCH_ORCHESTRATOR_SERVICE_URL=http://batch_orchestrator_service:5000
       - CLASS_MANAGEMENT_SERVICE_URL=http://class_management_service:5002
