docs(validation): add comprehensive LLM batching mode failure analysis
Add two detailed investigation documents analyzing serial_bundle vs per_request batching mode failures:

**llm-batching-mode-code-analysis-2025-11-19.md**
- Identifies 7 critical bugs in CJ Assessment service
- Documents 2 architectural design flaws
- Provides file paths, line numbers, and code snippets for each issue
- Includes SQL verification queries and fix priority matrix
- Key findings: runaway completion detection (>100

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -231,6 +231,7 @@ services:
       - LOG_LEVEL=DEBUG
       - HULEEDU_DB_USER=${HULEEDU_DB_USER}
       - HULEEDU_DB_PASSWORD=${HULEEDU_DB_PASSWORD}
+      - CJ_ASSESSMENT_SERVICE_LLM_BATCHING_MODE=${CJ_ASSESSMENT_SERVICE_LLM_BATCHING_MODE}
 
   # Spellchecker Service (add missing services that we already optimized)
   spellchecker_service:
