--- a/docker-compose.services.yml
+++ b/docker-compose.services.yml
@@ -555,6 +555,9 @@ services:
       # Admin API
       - LLM_PROVIDER_SERVICE_ADMIN_API_ENABLED=true
       - LLM_PROVIDER_SERVICE_ADMIN_API_KEY=${LLM_ADMIN_API_KEY}
+      - LLM_PROVIDER_SERVICE_QUEUE_PROCESSING_MODE=${LLM_PROVIDER_SERVICE_QUEUE_PROCESSING_MODE:-per_request}
+      - LLM_PROVIDER_SERVICE_SERIAL_BUNDLE_MAX_REQUESTS_PER_CALL=${LLM_PROVIDER_SERVICE_SERIAL_BUNDLE_MAX_REQUESTS_PER_CALL:-8}
+      - LLM_PROVIDER_SERVICE_BATCH_API_MODE=${LLM_PROVIDER_SERVICE_BATCH_API_MODE:-disabled}
       # Observability
       - OTEL_EXPORTER_OTLP_ENDPOINT=http://jaeger:4317
       - OTEL_SERVICE_NAME=llm_provider_service
