--- a/observability/prometheus/rules/service_alerts.yml
+++ b/observability/prometheus/rules/service_alerts.yml
@@ -26,11 +26,11 @@ groups:
   - alert: LLMPromptCacheLowHitRate
     expr: |
       (
-        sum(rate(llm_provider_prompt_cache_events_total{provider="anthropic", result="hit"}[5m]))
+        sum(rate(llm_provider_cache_scope_total{provider="anthropic", scope="assignment", result="hit"}[5m]))
         /
-        clamp_min(sum(rate(llm_provider_prompt_cache_events_total{provider="anthropic", result=~"hit|miss|bypass"}[5m])), 0.001)
-      ) < 0.2
-      and sum(rate(llm_provider_prompt_cache_events_total{provider="anthropic"}[5m])) > 0.1
+        clamp_min(sum(rate(llm_provider_cache_scope_total{provider="anthropic", scope="assignment"}[5m])), 0.001)
+      ) < 0.4
+      and sum(rate(llm_provider_cache_scope_total{provider="anthropic", scope="assignment"}[5m])) > 0.1
     for: 5m
     labels:
       severity: warning
@@ -39,6 +39,16 @@ groups:
       description: "Prompt cache hit rate is {{ $value | humanizePercentage }} over 5m; review prompt segmentation or TTL configuration."
       dashboard_url: "http://localhost:3000/d/huleedu-llm-prompt-cache/llm-provider-prompt-cache"
       runbook_url: "http://localhost:3000/d/huleedu-llm-prompt-cache/llm-provider-prompt-cache"
+
+  - alert: LLMPromptTTLOutOfOrder
+    expr: increase(llm_provider_prompt_ttl_violations_total[5m]) > 0
+    for: 1m
+    labels:
+      severity: warning
+    annotations:
+      summary: "Prompt TTL ordering violations detected"
+      description: "Prompt TTL ordering failed in the last 5m for provider {{ $labels.provider }} / model {{ $labels.model }} (stage={{ $labels.stage }})."
+      dashboard_url: "http://localhost:3000/d/huleedu-llm-prompt-cache/llm-provider-prompt-cache"
 
 - name: DistributedTracingAlerts
   rules:
