docs: archive port standardization review and update session handoff
Archive comprehensive code review of Docker port configuration standardization plan identifying architectural gaps (metrics exposure model inconsistencies, Dockerfile hard-bindings, rule ID collision). Document implemented fixes: Result Aggregator metrics now scraped on actual port 9096, Identity/Email services updated with proper env prefixes and dynamic Dockerfile binds, removed unused host metrics mappings. Update session handoff with metrics

--- a/observability/prometheus/prometheus.yml
+++ b/observability/prometheus/prometheus.yml
@@ -61,7 +61,12 @@ scrape_configs:
     
   - job_name: 'result_aggregator_service'
     static_configs:
-      - targets: ['result_aggregator_service:4003']
+      - targets: ['result_aggregator_service:9096']
+    metrics_path: '/metrics'
+
+  - job_name: 'identity_service'
+    static_configs:
+      - targets: ['identity_service:7005']
     metrics_path: '/metrics'
     
   - job_name: 'batch_conductor_service'
