--- a/docker-compose.services.yml
+++ b/docker-compose.services.yml
@@ -92,7 +92,8 @@ services:
       - huleedu_internal_network
     ports:
       - "4003:4003"  # API port
-      - "9096:9096"  # Metrics port
+    expose:
+      - "9096"       # Metrics port (internal only)
     environment:
       - ENV_TYPE=docker
       - ENVIRONMENT=${ENVIRONMENT:-production}
@@ -706,7 +707,6 @@ services:
       - huleedu_internal_network
     ports:
       - "7005:7005"  # HTTP API port
-      - "9097:9097"  # Prometheus metrics port
     environment:
       - ENV_TYPE=docker
       - ENVIRONMENT=${ENVIRONMENT:-production}
@@ -723,7 +723,6 @@ services:
       - IDENTITY_LOG_LEVEL=INFO
       - IDENTITY_SERVICE_HOST=0.0.0.0
       - IDENTITY_SERVICE_HTTP_PORT=7005
-      - IDENTITY_SERVICE_PROMETHEUS_PORT=9097
       # JWT Configuration
       - IDENTITY_SERVICE_JWT_ACCESS_TOKEN_TTL_SECONDS=900  # 15 minutes
       - IDENTITY_SERVICE_JWT_REFRESH_TOKEN_TTL_SECONDS=604800  # 7 days
@@ -766,7 +765,6 @@ services:
       - huleedu_internal_network
     ports:
       - "8082:8080"  # HTTP API port (external 8082, internal 8080)
-      - "9098:9098"  # Prometheus metrics port
     environment:
       # Core environment
       - ENV_TYPE=docker
@@ -786,8 +784,7 @@ services:
       # Service configuration
       - EMAIL_LOG_LEVEL=INFO
       - EMAIL_SERVICE_HOST=0.0.0.0
-      - EMAIL_SERVICE_HTTP_PORT=8080
-      - EMAIL_SERVICE_PROMETHEUS_PORT=9098
+      - EMAIL_HTTP_PORT=8080
       # Email provider configuration (SMTP for production)
       - EMAIL_EMAIL_PROVIDER=smtp
       - EMAIL_SMTP_HOST=${EMAIL_SMTP_HOST:-mail.privateemail.com}
