--- a/services/identity_service/Dockerfile
+++ b/services/identity_service/Dockerfile
@@ -16,4 +16,4 @@ FROM base AS production
 COPY --chown=appuser:appuser services/identity_service/ /app/services/identity_service/
 USER appuser
 WORKDIR /app
-CMD ["pdm", "run", "-p", "/app", "python", "-m", "hypercorn", "services.identity_service.app:app", "--bind", "0.0.0.0:7005"]
+CMD ["sh", "-c", "pdm run -p /app python -m hypercorn services.identity_service.app:app --bind 0.0.0.0:${IDENTITY_SERVICE_HTTP_PORT:-7005}"]
