feat(docker): add .env file loading to eng5-runner service
Add env_file directive to eng5-runner service to load .env configuration,
enabling ENG5_ANCHOR_DIR_OVERRIDE and other environment variables for
LOWER5 tail-only experiment configuration.

--- a/docker-compose.services.yml
+++ b/docker-compose.services.yml
@@ -419,6 +419,8 @@ services:
       - huleedu_internal_network
     ports:
       - "9095:9090"
+    env_file:
+      - .env
     environment:
       - ENV_TYPE=docker
       - ENVIRONMENT=${ENVIRONMENT:-production}
