feat(llm-provider): add ENG5 LOWER5 mock profile parity tooling

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -156,6 +156,8 @@ services:
       - ENV_TYPE=docker
       - ENVIRONMENT=development
       - LOG_LEVEL=DEBUG
+      - LLM_PROVIDER_SERVICE_USE_MOCK_LLM=${LLM_PROVIDER_SERVICE_USE_MOCK_LLM}
+      - LLM_PROVIDER_SERVICE_MOCK_MODE=${LLM_PROVIDER_SERVICE_MOCK_MODE}
 
   # API Gateway Service
   api_gateway_service:
