--- a/docker-compose.services.yml
+++ b/docker-compose.services.yml
@@ -577,6 +577,7 @@ services:
       - LLM_PROVIDER_SERVICE_REDIS_URL=redis://redis:6379
       # Testing configuration
       - LLM_PROVIDER_SERVICE_USE_MOCK_LLM=${USE_MOCK_LLM:-true}
+      - LLM_PROVIDER_SERVICE_MOCK_MODE=${LLM_PROVIDER_SERVICE_MOCK_MODE:-default}
       # LLM Provider API Keys (from env)
       - LLM_PROVIDER_SERVICE_ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY}
       - LLM_PROVIDER_SERVICE_OPENAI_API_KEY=${OPENAI_API_KEY}
