--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,9 @@
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview",
     "type-check": "vue-tsc --noEmit",
-    "test": "vitest"
+    "test": "vitest",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "pinia": "^3.0.4",
@@ -16,13 +18,17 @@
     "zod": "^4.1.13"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.1",
     "@tailwindcss/vite": "^4.1.14",
     "@types/node": "^24.10.1",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/test-utils": "^2.4.6",
+    "eslint": "^9.39.1",
+    "eslint-plugin-vue": "^10.6.2",
     "jsdom": "^27.3.0",
     "tailwindcss": "^4.1.14",
     "typescript": "~5.7.0",
+    "typescript-eslint": "^8.49.0",
     "vite": "^6.0.3",
     "vitest": "^4.0.15",
     "vue-tsc": "^2.2.0"
