--- a/.github/workflows/validate-tasks-docs.yml
+++ b/.github/workflows/validate-tasks-docs.yml
@@ -28,7 +28,7 @@ jobs:
           python-version: '3.11'
 
       - name: Install dependencies
-        run: pip install pydantic
+        run: pip install pydantic pyyaml
 
       - name: Validate TASKS frontmatter and structure
         run: |
@@ -46,6 +46,9 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
+
+      - name: Install dependencies
+        run: pip install pydantic pyyaml
 
       - name: Validate documentation structure
         run: |
