Offload: exclude nvidia/cuda packages from ROCm image

--- a/scripts/ml_training/essay_scoring/offload/Dockerfile
+++ b/scripts/ml_training/essay_scoring/offload/Dockerfile
@@ -35,9 +35,9 @@ COPY scripts/ml_training/essay_scoring/ scripts/ml_training/essay_scoring/
 RUN pdm export -G ml-research -f requirements --without-hashes -o /tmp/requirements.txt && \
     # PDM export may include environment markers; match package name prefix (not full line).
     grep -Ev '^(torch|torchvision|torchaudio)\b' /tmp/requirements.txt \
-      | grep -Ev '^(triton)\b' \
-      | grep -Ev '^(nvidia-)\b' \
-      | grep -Ev '^(cuda-)\b' \
+      | grep -Ev '^triton\b' \
+      | grep -Ev '^nvidia-' \
+      | grep -Ev '^cuda-' \
       > /tmp/requirements.filtered.txt && \
     python -m pip install --no-cache-dir -r /tmp/requirements.filtered.txt
 
