--- a/pyproject.toml
+++ b/pyproject.toml
@@ -81,6 +81,7 @@ ml-research = [
     "matplotlib",
     "numpy",
     "pandas",
+    "protobuf",
     "scikit-learn",
     "sentence-transformers",
     "sentencepiece",
